vlib/v/checker/tests/if_smartcast_mutation_err.out
vlib/v/checker/tests/if_smartcast_mutation_err.vv:5:3: error: cannot mutate `a` in a non-mut smartcast, use `if mut a ...`
    3 |     a := SmartcastValue(1)
    4 |     if a is int {
    5 |         a = 3
      |         ^
    6 |     }
    7 | }
