vlib/v/checker/tests/if_smartcast_mutation_err.vv
type SmartcastValue = int | string
fn main() {
	mut a := SmartcastValue(1)
	if a is int {
		a = 3
	}

	mut b := SmartcastValue(1)
	if mut b is int {
		b = 'hello'
	}
}
